# DevDock

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: intro.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  logs.rs  main.rs  paths.rs  process_manager.rs  react_native.rs  service.rs  terminal.rs  tray.rs  windows_service.rs
