[package]
name = "devdock"
version = "0.1.0"
description = "A Windows tray supervisor for local development services"
authors = ["DevDock contributors"]
edition = "2024"

[lib]
name = "devdock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "devdock"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
directories = "6"
open = "5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Foundation"] }
